feat(spring-data): get finder from AssignmentsFinderFactory by environment variable